# codebase-indexer-py

./: .gitignore  CHANGELOG.md  Makefile  README.md  SITE.md  pyproject.toml
.codebase-index/: .gitattributes  artifact.json  graph.db.zst
.github/workflows/: docs.yml  release.yml  validation.yml
docs/: agent-integration.md  configuration.md  getting-started.md  index.md
docs/reference/: cli.md  languages.md
scripts/: run_repo_benchmarks.py
src/cli/: main.py
src/indexer/: artifact.py  errors.py  extractor.py  pipeline.py  registry.py  relations.py  store.py  treesitter.py  walker.py
src/indexer/evaluation/: __init__.py  content_ids.py  models.py  token_counter.py
src/indexer/evalutation/: __init__.py  ledger.py  serialization.py  token_counter.py
tests/: conftest.py  test_extractor.py  test_pipeline.py  test_registry.py  test_semantic_e2e.py  test_tools.py
tests/benchmarks/: test_indexing_benchmarks.py
tests/evaluation/: test_content_ids.py  test_ledger.py  test_serialization.py
